Fix icon menu subitem padding

--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -45,6 +45,10 @@
     }
   }
 
+  .sub-menu .menu-item :where(a, label, button):where(:not(._no-menu-item-style)) {
+    padding: 0 1rem;
+  }
+
   .user-profile-image {
     border-radius: 50%;
     height: 1.2em;
