--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -283,7 +283,7 @@
       content-visibility: visible;
     }
 
-    :where(a, label, button):not(._no-menu-item-style) {
+    :where(a, label, button):where(:not(._no-menu-item-style)) {
       color: var(--navigation-subitem-color, var(--navigation-color));
 
       &:hover {
