--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -381,6 +381,7 @@
   --popup-menu-background: var(--bg-800);
   --popup-menu-background-hover: var(--bg-700);
   --popup-menu-background-selected: var(--bg-700);
+  // --popup-menu-background-selected-hover: var(--popup-menu-background-hover);
   // --popup-menu-color: var(--fg-inverted);
   // --popup-menu-color-hover: var(--fg-inverted);
 
