--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -524,6 +524,7 @@
   --popup-menu-background: var(--bg-50);
   --popup-menu-background-hover: var(--bg-100);
   --popup-menu-background-selected: var(--bg-100);
+  --popup-menu-background-selected-hover: var(--popup-menu-background-hover);
   --popup-menu-color: var(--fg-inverted);
   --popup-menu-color-hover: var(--fg-inverted);
 
