--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -25,6 +25,8 @@
 
 .chapter {
   &__article {
+    position: relative;
+    z-index: 1; // Makes sure the popup menus are higher thn surrounding elements
     padding-top: var(--layout-spacing-vertical);
   }
 
