--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -29,7 +29,7 @@
     padding-left: 1.05em;
   }
 
-  a {
+  a:where(:not(.button, .wp-element-button)) {
     color: var(--widget-link-color);
 
     &:hover {
