Fix list styles in widgets

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -27,6 +27,11 @@
     }
   }
 
+  :where(ul, ol) {
+    list-style: initial;
+    padding-left: 1.05em;
+  }
+
   .widgettitle {
     font-size: 1.4em; // h3
     margin-bottom: .625rem;
