Fix flex grow for vertical card descriptions

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -330,6 +330,12 @@
         margin-bottom: 0;
       }
     }
+
+    &._vertical {
+      .cell-desc {
+        flex-grow: 1;
+      }
+    }
   }
 
   &__content {
