--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -4,7 +4,7 @@
 
 .comment-section {
   --layout-link-color-hover: var(--comment-link-color-hover, var(--fg-300));
-  margin-top: 40px;
+  margin-top: 5rem;
 
   blockquote a[href^="#paragraph-"] {
     border-bottom: none;
