Hide sidebar in chapter print layout

--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -53,7 +53,8 @@
   .wp-block-file-wrapper,
   .micro-menu,
   .paragraph-tools,
-  .lightbox {
+  .lightbox,
+  .fictioneer-sidebar {
     display: none !important;
     content-visibility: hidden;
   }
