--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -333,9 +333,13 @@
   }
 
   &__content {
-    font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
+    font-size: var(--card-content-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 4.3cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
     line-height: var(--card-line-height, 1.45);
     overflow-wrap: break-word;
+
+    @container (min-width: 340px) {
+      font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
+    }
 
     @container (min-width: 640px) {
       font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
