--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -324,7 +324,8 @@
       transform: translate(100%);
 
       &:last-child {
-        border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
+        border-radius: var(--layout-border-radius-small);
+        border-top-left-radius: 0;
       }
 
       .menu-item {
