--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -363,7 +363,7 @@ p.has-drop-cap::first-letter {
 .comment-section blockquote {
   background: var(--blockquote-background);
   border-left: 2px solid var(--fg-800);
-  border-radius: var(--layout-border-radius-small);
+  border-radius: calc(var(--layout-border-radius-small) * var(--layout-nested-border-radius-multiplier, 1));
   padding: .75em 1.5em;
 
   p:not(:last-child) {
