Added check for issues with the theme

--- a/src/scss/admin/_properties.scss
+++ b/src/scss/admin/_properties.scss
@@ -22,6 +22,7 @@ body[class*="page_fictioneer"] {
   --subnav-item-border-color-active: #fff;
 
   --card-background-color: #fff;
+  --card-background-color-warning: #fdeded;
   --card-border-color: #c3c4c7;
 
   --checkbox-toggle-background-color: #ddd;
