Add list type to shortcode and then some

--- a/src/scss/complete.scss
+++ b/src/scss/complete.scss
@@ -10,6 +10,7 @@
 @import 'comments';
 @import 'fonts-full';
 @import 'collections';
+@import 'post-list';
 
 @import '_reader-settings';
 @import '_suggestions';
