--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -422,9 +422,9 @@
 
     .card__right {
       flex: 0 0 auto;
-      color: var(--fg-800);
       font-size: var(--card-list-right-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 2.5cqw + var(--card-font-size-grow-mod, 0px), 13.5px + var(--card-font-size-max-mod, 0px)));
       line-height: 1.55;
+      opacity: .5;
 
       &._flex {
         display: flex;
