--- a/src/scss/customize/content-list-style-lines.scss
+++ b/src/scss/customize/content-list-style-lines.scss
@@ -6,7 +6,7 @@
   --card-content-li-background: none;
   --story-blog-li-background: none;
   --chapter-li-background: none;
-  --chapter-li-padding-bottom-offset: var(--chapter-list-gap, 4px);
+  --chapter-li-padding-bottom-offset: var(--chapter-list-gap, var(--content-list-gap, 4px));
 
   :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
     border-radius: 0;
