Move pseudo-separator to CSS utilities

--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -394,3 +394,10 @@ html:not(.logged-in) body:not(.logged-in) .hide-if-logged-out,
 .header-polygon {
   clip-path: var(--header-polygon);
 }
+
+.pseudo-separator > *:where(:not(:first-child))::before {
+  content: var(--post-list-separator, '• ');
+  color: var(--post-list-meta-divider-color, var(--fg-800));
+  font-family: var(--ff-base);
+  margin: 0 .125em;
+}
